# catos-hello

./: CMakeLists.txt  InstallAppsTab.cpp  InstallAppsTab.h  PKGBUILD  TipsTab.cpp  TipsTab.h  desktop.yaml  main.cpp  mainwindow.cpp
news/: de.html  en.html  en_US.html  fr.html  zh_CN.html
toolkits/: clean  sysup
translations/: catos-hello_de.ts  catos-hello_fr.ts  catos-hello_zh_CN.ts
